--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -84,11 +84,11 @@
 	</center>
 	<div style="padding: 5px;">
 		<div class="cmd tooltips" style="margin-left:5px;display: #namedistri_display#;">
-			<span title="Distribution Linux || Date valeur : #namedistri_value# || Date collecte : #namedistri_collect#" class="fab fa-linux" style="min-width:15px;"></span>
+			<span title="Distribution Linux || Date valeur : #namedistri_value# || Date collecte : #namedistri_collect#" style="width:15px;max-width:15px;max-height:15px;">#namedistri_icon#</span>
 			<span>#namedistri#</span>
 		</div>
 		<div class="cmd tooltips" style="margin-left:5px;display: #uptime_display#;">
-			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#" class="fas fa-tachometer-alt" style="min-width:15px;"></span>
+			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#" style="width:15px;max-width:15px;max-height:15px;">#uptime_icon#</span>
 			<span id="uptime#id#"></span>
 		</div>
 		<script>
@@ -97,7 +97,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #loadavg_display#;">
-			<span title="Charge système (load average) || Date valeur : #loadavg_value# || Date collecte : #loadavg_collect#" class="fa techno-courbes3" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Charge système (load average) || Date valeur : #loadavg_value# || Date collecte : #loadavg_collect#" style="width:15px;max-width:15px;max-height:15px;">#loadavg1mn_icon#</span>
 			<span id="loadavg1mn#id#"></span><span id="loadavg5mn#id#"></span><span id="loadavg15mn#id#"></span>
 		</div>
 		<script>
@@ -138,7 +138,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#;">
-			<span title="Mémoire Vive (% Libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#" class="fa techno-memory" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Mémoire Vive (% Libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#" style="width:15px;max-width:15px;max-height:15px;">#Mem_icon#</span>
 			<span id="Mempourcent#id#"></span>
 		</div>
 		<script>
@@ -157,7 +157,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_swap_display#;">
-			<span title="Mémoire Swap (% Libre) || Date valeur : #Mem_swap_value# || Date collecte : #Mem_swap_collect#" class="fas fa-list" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Mémoire Swap (% Libre) || Date valeur : #Mem_swap_value# || Date collecte : #Mem_swap_collect#" style="width:15px;max-width:15px;max-height:15px;">#Mem_swap_icon#</span>
 			<span id="Swappourc#id#"></span>
 		</div>
 		<script>
@@ -176,7 +176,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #ethernet0_display#;">
-			<span title="Trafic Réseau (#ethernet0_name# / #ethernet0_ip#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#" class="fa techno-fleches" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Trafic Réseau (#ethernet0_name# / #ethernet0_ip#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#" style="width:15px;max-width:15px;max-height:15px;">#ethernet0_icon#</span>
 			<span id="ethernet0#id#"></span>
 		</div>
 		<script>
@@ -185,7 +185,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #hddused_display#;">
-			<span title="Espace disque (% utilisé) || Date valeur : #hddtotal_value# || Date collecte : #hddtotal_collect#" class="fas fa-hdd" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Espace disque (% utilisé) || Date valeur : #hddtotal_value# || Date collecte : #hddtotal_collect#" style="width:15px;max-width:15px;max-height:15px;">#hddtotal_icon#</span>
 			<span id="hddpourcused#id#"></span>
 		</div>
 		<script>
@@ -207,7 +207,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolume2_display#' == 'OK') {
-					document.getElementById('synovol2#id#').innerHTML = '<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Syno Volume 2 (% utilisé) || Date valeur : #hddtotalv2_value# || Date collecte : #hddtotalv2_collect#" class="fas fa-hdd" style="width:15px;max-width:15px;max-height:15px;"></span> <span id="hddpourcusedv2#id#"></span></div>';
+					document.getElementById('synovol2#id#').innerHTML = '<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Syno Volume 2 (% utilisé) || Date valeur : #hddtotalv2_value# || Date collecte : #hddtotalv2_collect#" style="width:15px;max-width:15px;max-height:15px;">#hddtotalv2_icon#</span> <span id="hddpourcusedv2#id#"></span></div>';
 					if ('#hddpourcusedv2#' === '') {
 						document.getElementById('hddpourcusedv2#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#hddpourcusedv2#') < parseInt('#hddpourcusedv2_colorlow#')) {
@@ -226,7 +226,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeusb_display#' == 'OK') {
-					document.getElementById('synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Syno Volume USB (% utilisé) || Date valeur : #hddtotalusb_value# || Date collecte : #hddtotalusb_collect#" class="fab fa-usb
+					document.getElementById('synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Syno Volume USB (% utilisé) || Date valeur : #hddtotalusb_value# || Date collecte : #hddtotalusb_collect#" style="width:15px;max-width:15px;max-height:15px;">#hddtotalusb_icon#</span> <span id="hddpourcusedusb#id#"></span></div>';
 					if ('#hddpourcusedusb#' === '') {
 						document.getElementById('hddpourcusedusb#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#hddpourcusedusb#') < parseInt('#hddpourcusedusb_colorlow#')) {
@@ -245,7 +245,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeesata_display#' == 'OK') {
-					document.getElementById('synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Syno Volume eSATA (% utilisé) || Date valeur : #hddtotalesata_value# || Date collecte : #hddtotalesata_collect#" class="fas fa-hdd
+					document.getElementById('synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Syno Volume eSATA (% utilisé) || Date valeur : #hddtotalesata_value# || Date collecte : #hddtotalesata_collect#" style="width:15px;max-width:15px;max-height:15px;">#hddtotalesata_icon#</span> <span id="hddpourcusedesata#id#"></span></div>';
 					if ('#hddpourcusedesata#' === '') {
 						document.getElementById('hddpourcusedesata#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#hddpourcusedesata#') < parseInt('#hddpourcusedesata_colorlow#')) {
@@ -261,7 +261,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #cpu_display#;">
-			<span title="Nombre CPU - Fréquence (Température) || Date valeur : #cpu_value# || Date collecte : #cpu_collect#" class="fa techno-pc" style="width:15px;max-width:15px;max-height:15px;"></span>
+			<span title="Nombre CPU - Fréquence (Température) || Date valeur : #cpu_value# || Date collecte : #cpu_collect#" style="width:15px;max-width:15px;max-height:15px;">#cpu_icon#</span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
 		<script>
