--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -202,7 +202,7 @@
 				} else if ((parseInt('#hdd_used_percent#') > parseInt('#hdd_used_percent_colorhigh#')) && '#hdd_used_percent_colorhigh#' !== '') {
 					document.getElementById('hdd#id#').innerHTML = 'Total : #hdd_total# - Utilisé : #hdd_used# (<span title="Stats : Espace Disque (% Utilisé)<br>Min: #hdd_used_percent_minHistory# | Moy : #hdd_used_percent_averageHistory# | Max : #hdd_used_percent_maxHistory#" data-cmd_id="#hdd_used_percent_id#" class="value history cursor tooltips" style="color: var(--al-danger-color) !important;">#hdd_used_percent#</span><span>%#hdd_used_percent_tendance#</span>)';
 				} else {
-					document.getElementById('hdd_used_percent#id#').innerHTML = 'Total : #hdd_total# - Utilisé : #hdd_used# (<span title="Stats : Espace Disque (% Utilisé)<br>Min: #hdd_used_percent_minHistory# | Moy : #hdd_used_percent_averageHistory# | Max : #hdd_used_percent_maxHistory#" data-cmd_id="#hdd_used_percent_id#" class="value history cursor tooltips">#hdd_used_percent#</span><span>%#hdd_used_percent_tendance#</span>)';
+					document.getElementById('hdd#id#').innerHTML = 'Total : #hdd_total# - Utilisé : #hdd_used# (<span title="Stats : Espace Disque (% Utilisé)<br>Min: #hdd_used_percent_minHistory# | Moy : #hdd_used_percent_averageHistory# | Max : #hdd_used_percent_maxHistory#" data-cmd_id="#hdd_used_percent_id#" class="value history cursor tooltips">#hdd_used_percent#</span><span>%#hdd_used_percent_tendance#</span>)';
 				}
 			}
 		</script>
