--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -96,8 +96,8 @@
 				document.getElementById('uptime#id#').innerHTML = '<span>#uptime#</span>';
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #loadavg_display#;">
-			<span title="Charge système (load average) || Date valeur : #loadavg_value# || Date collecte : #loadavg_collect#" style="width:15px;max-width:15px;max-height:15px;">#load_avg_1mn_icon#</span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #load_avg_display#;">
+			<span title="Charge système (load average) || Date valeur : #load_avg_value# || Date collecte : #load_avg_collect#" style="width:15px;max-width:15px;max-height:15px;">#load_avg_icon#</span>
 			<span id="load_avg_1mn#id#"></span><span id="load_avg_5mn#id#"></span><span id="load_avg_15mn#id#"></span>
 		</div>
 		<script>
@@ -137,22 +137,22 @@
 				}
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#;">
-			<span title="Mémoire Vive (% Libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#" style="width:15px;max-width:15px;max-height:15px;">#Mem_icon#</span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #memory_display#;">
+			<span title="Mémoire Vive (% Libre) || Date valeur : #memory_value# || Date collecte : #memory_collect#" style="width:15px;max-width:15px;max-height:15px;">#memory_icon#</span>
 			<span id="memory_free_percent#id#"></span>
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#memory_free_percent#' === '') {
-					document.getElementById('memory_free_percent#id#').innerHTML = '<span>#Mem#</span>';
+					document.getElementById('memory_free_percent#id#').innerHTML = '<span>#memory#</span>';
 				} else if ((parseInt('#memory_free_percent#') > parseInt('#memory_free_percent_colorhigh#')) && '#memory_free_percent_colorhigh#' !== '') {
-					document.getElementById('memory_free_percent#id#').innerHTML = '#Mem# (<span class="state" style="color: var(--al-success-color) !important;">#memory_free_percent#</span><span>%</span>)';
+					document.getElementById('memory_free_percent#id#').innerHTML = '#memory# (<span class="state" style="color: var(--al-success-color) !important;">#memory_free_percent#</span><span>%</span>)';
 				} else if ((parseInt('#memory_free_percent#') >= parseInt('#memory_free_percent_colorlow#')) && (parseInt('#memory_free_percent#') <= parseInt('#memory_free_percent_colorhigh#'))) {
-					document.getElementById('memory_free_percent#id#').innerHTML = '#Mem# (<span class="state" style="color: var(--al-warning-color) !important;">#memory_free_percent#</span><span>%</span>)';
+					document.getElementById('memory_free_percent#id#').innerHTML = '#memory# (<span class="state" style="color: var(--al-warning-color) !important;">#memory_free_percent#</span><span>%</span>)';
 				} else if (parseInt('#memory_free_percent#') < parseInt('#memory_free_percent_colorlow#')) {
-					document.getElementById('memory_free_percent#id#').innerHTML = '#Mem# (<span class="state" style="color: var(--al-danger-color) !important;">#memory_free_percent#</span><span>%</span>)';
+					document.getElementById('memory_free_percent#id#').innerHTML = '#memory# (<span class="state" style="color: var(--al-danger-color) !important;">#memory_free_percent#</span><span>%</span>)';
 				} else {
-					document.getElementById('memory_free_percent#id#').innerHTML = '#Mem# (<span class="state">#memory_free_percent#</span><span>%</span>)';
+					document.getElementById('memory_free_percent#id#').innerHTML = '#memory# (<span class="state">#memory_free_percent#</span><span>%</span>)';
 				}
 			}
 		</script>
@@ -184,22 +184,22 @@
 				document.getElementById('network#id#').innerHTML = '<span>#network#</span>';
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #hdd_used_display#;">
-			<span title="Espace disque (% utilisé) || Date valeur : #hdd_total_value# || Date collecte : #hdd_total_collect#" style="width:15px;max-width:15px;max-height:15px;">#hdd_total_icon#</span>
-			<span id="hdd_used_percent#id#"></span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #hdd_display#;">
+			<span title="Espace disque (% utilisé) || Date valeur : #hdd_value# || Date collecte : #hdd_collect#" style="width:15px;max-width:15px;max-height:15px;">#hdd_icon#</span>
+			<span id="hdd#id#"></span>
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#hdd_used_percent#' === '') {
-					document.getElementById('hdd_used_percent#id#').innerHTML = '<span></span>';
+					document.getElementById('hdd#id#').innerHTML = '<span></span>';
 				} else if (parseInt('#hdd_used_percent#') < parseInt('#hdd_used_percent_colorlow#')) {
-					document.getElementById('hdd_used_percent#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-success-color) !important;">#hdd_used_percent#</span><span>%</span>)';
+					document.getElementById('hdd#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-success-color) !important;">#hdd_used_percent#</span><span>%</span>)';
 				} else if ((parseInt('#hdd_used_percent#') >= parseInt('#hdd_used_percent_colorlow#')) && (parseInt('#hdd_used_percent#') <= parseInt('#hdd_used_percent_colorhigh#'))) {
-					document.getElementById('hdd_used_percent#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-warning-color) !important;">#hdd_used_percent#</span><span>%</span>)';
+					document.getElementById('hdd#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-warning-color) !important;">#hdd_used_percent#</span><span>%</span>)';
 				} else if ((parseInt('#hdd_used_percent#') > parseInt('#hdd_used_percent_colorhigh#')) && '#hdd_used_percent_colorhigh#' !== '') {
-					document.getElementById('hdd_used_percent#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-danger-color) !important;">#hdd_used_percent#</span><span>%</span>)';
+					document.getElementById('hdd#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state" style="color: var(--al-danger-color) !important;">#hdd_used_percent#</span><span>%</span>)';
 				} else {
-					document.getElementById('hdd_used_percent#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state">#hdd_used_percent#</span><span>%</span>)';
+					document.getElementById('hdd#id#').innerHTML = 'Total : <span class="state">#hdd_total#</span> - Utilisé : <span class="state">#hdd_used#</span> (<span class="state">#hdd_used_percent#</span><span>%</span>)';
 				}
 			}
 		</script>
@@ -207,7 +207,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolume2_display#' == 'OK') {
-					document.getElementById('synovol2#id#').innerHTML = '<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddv2_used_display#;"><span title="Syno Volume 2 (% utilisé) || Date valeur : #syno_hddv2_total_value# || Date collecte : #syno_hddv2_total_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddv2_total_icon#</span> <span id="syno_hddv2_used_percent#id#"></span></div>';
+					document.getElementById('synovol2#id#').innerHTML = '<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddv2_display#;"><span title="Syno Volume 2 (% utilisé) || Date valeur : #syno_hddv2_value# || Date collecte : #syno_hddv2_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddv2_icon#</span> <span id="syno_hddv2_used_percent#id#"></span></div>';
 					if ('#syno_hddv2_used_percent#' === '') {
 						document.getElementById('syno_hddv2_used_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddv2_used_percent#') < parseInt('#syno_hddv2_used_percent_colorlow#')) {
@@ -226,7 +226,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeusb_display#' == 'OK') {
-					document.getElementById('synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddusb_used_display#;"><span title="Syno Volume USB (% utilisé) || Date valeur : #syno_hddusb_total_value# || Date collecte : #syno_hddusb_total_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddusb_total_icon#</span> <span id="syno_hddusb_used_percent#id#"></span></div>';
+					document.getElementById('synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddusb_display#;"><span title="Syno Volume USB (% utilisé) || Date valeur : #syno_hddusb_value# || Date collecte : #syno_hddusb_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddusb_icon#</span> <span id="syno_hddusb_used_percent#id#"></span></div>';
 					if ('#syno_hddusb_used_percent#' === '') {
 						document.getElementById('syno_hddusb_used_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddusb_used_percent#') < parseInt('#syno_hddusb_used_percent_colorlow#')) {
@@ -245,7 +245,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeesata_display#' == 'OK') {
-					document.getElementById('synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddesata_used_display#;"><span title="Syno Volume eSATA (% utilisé) || Date valeur : #syno_hddesata_total_value# || Date collecte : #syno_hddesata_total_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddesata_total_icon#</span> <span id="syno_hddesata_used_percent#id#"></span></div>';
+					document.getElementById('synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #syno_hddesata_display#;"><span title="Syno Volume eSATA (% utilisé) || Date valeur : #syno_hddesata_value# || Date collecte : #syno_hddesata_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddesata_icon#</span> <span id="syno_hddesata_used_percent#id#"></span></div>';
 					if ('#syno_hddesata_used_percent#' === '') {
 						document.getElementById('syno_hddesata_used_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddesata_used_percent#') < parseInt('#syno_hddesata_used_percent_colorlow#')) {
